fixed bugs on small devices

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -97,7 +97,6 @@ li{
   }
 
   img {
-    
     height: 2em;
     filter: invert(100%);
   }
@@ -107,18 +106,12 @@ li{
     input {
       width: 90%;
     }
-    button {
-      
-    }
   }
 
   @include sm{
     width: 80%;
     input {
       width: 90%;
-    }
-    button {
-      
     }
   }
 
@@ -137,7 +130,7 @@ li{
   }
 
   @include xl{
-    width: 60%;
+    width: 42%;
     input {
       width: 90%;
     }
@@ -414,7 +407,6 @@ li{
 
 select{
   border-radius: $border;
-  font-size: 16px;
   outline: 0;
   border: 0;
   background: $main-color;
@@ -424,4 +416,8 @@ select{
   padding: 0 .5em;
   color: #fff;
   cursor: pointer;
+
+  @include sr {
+    font-size: 16px;
+  }
 }
